# folders

./: meson.build
src/: DirectoryModel.vala  Folders.vala  IconView.vala  MainWindow.vala  Sidebar.vala  SidebarRow.vala  main.vala
