project('com.github.obyknovenius.folders', ['vala', 'c'])

executable(
    'com.github.obyknovenius.folders',
    'src/main.vala',
    'src/Folders.vala',
    'src/MainWindow.vala',
    'src/Sidebar.vala',
    'src/SidebarRow.vala',
    'src/IconView.vala',
    'src/DirectoryModel.vala',
    dependencies: [
        dependency('glib-2.0'),
        dependency('gobject-2.0'),
        dependency('gtk+-3.0'),
        dependency('granite')
    ]
)
